--- a/client/client-website/package.json
+++ b/client/client-website/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@google/maps": "^1.1.3",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@react-google-maps/api": "^2.19.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.64.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
