--- a/client/client-website/package.json
+++ b/client/client-website/package.json
@@ -13,9 +13,11 @@
     "@google/maps": "^1.1.3",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@react-google-maps/api": "^2.19.2",
+    "http-server": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.64.2"
+    "sass": "^1.64.2",
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -26,6 +28,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-pwa": "^0.16.4"
   }
 }
