--- a/client/client-website/package.json
+++ b/client/client-website/package.json
@@ -13,6 +13,7 @@
     "@google/maps": "^1.1.3",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@react-google-maps/api": "^2.19.2",
+    "cors": "^2.8.5",
     "http-server": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
